<resources>
    <string name="app_name">CalcPackage</string>
        <string name="action_settings">Settings</string>
        <string name="no_text"> </string>
        <string name="rcl">RCL</string>
        <string name="sto">STO</string>
        <string name="m_minus">M-</string>
        <string name="shift">SHIFT</string>
        <string name="rad">RAD</string>
        <string name="abs">ABS</string>
        <string name="mr">MR</string>
        <string name="ms">MS</string>
        <string name="m_plus">M+</string>
        <string name="inverse_sin">sin1</string>
        <string name="inverse_cos">cos1</string>
        <string name="inverse_tan">tan1</string>
        <string name="expo">ex</string>
        <string name="ten_power">10x</string>
        <string name="rnd">rnd</string>
        <string name="sin_sign">88</string>
        <string name="cos_sign">cos</string>
        <string name="tan_sign">tan</string>
        <string name="natural_log">ln</string>
        <string name="log">log</string>
        <string name="cube_root">3?</string>
        <string name="cube">x3</string>
        <string name="one_over_x">1/x</string>
        <string name="x_power_y">Yx</string>
        <string name="square_root">/</string>
        <string name="x_square">x^2</string>
        <string name="percent">%</string>
        <string name="open_bracket">(</string>
        <string name="close_bracket">)</string>
        <string name="seven_button">7</string>
        <string name="eight_button">8</string>
        <string name="nine_button">9</string>
        <string name="single_delete">del</string>
        <string name="clear">AC</string>
        <string name="factorial">n!</string>
        <string name="combination">c</string>
        <string name="permutation">p</string>
        <string name="rate">Rate</string>
        <string name="four_button">4</string>
        <string name="five_button">5</string>
        <string name="six_button">6</string>
        <string name="multiplication">x</string>
        <string name="division">/</string>
        <string name="pi">ii</string>
        <string name="e">e</string>
        <string name="comma">,</string>
        <string name="one_button">1</string>
        <string name="two_button">2</string>
        <string name="three_button">3</string>
        <string name="addition">+</string>
        <string name="subtraction">-</string>
        <string name="zero_button">0</string>
        <string name="point">.</string>
        <string name="exp">exp</string>
        <string name="ans">Ans</string>
        <string name="equal_sign">=</string>
        <string name="x_value">x</string>
        <string name="plus_minus">+/-</string>
        <string name="plot">Plot</string>
        <string name="asterisk">*</string>
    <string name="logbasetwo">lg</string>
    <string name="checkup">checkup</string>
    <string name="checkdn">checkdn</string>
</resources>
